--- a/Practices/Ex-helloWorld.html
+++ b/Practices/Ex-helloWorld.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World.</title>
+    <title>Hello Universe.</title>
 </head>
 <body>
 <p>This is a practice doc for git hub.</p>
+<p>Save the earth</p>
 </body>
 </html>
